<resources>
    <string name="app_name">StudentPortalApp</string>

    <string name="welocme">Добро пожаловать!</string>
    <string name="name_portal"><b>СтудентПортал</b></string>
    <string name="tint_number_phone">Введите номер телефона</string>
    <string name="tint_password">Введите пароль</string>
    <string name="tint_password_2">Повторно введите пароль</string>
    <string name="tint_gender">Введите пол</string>
    <string name="tint_date">Введите дату рождения</string>
    <string name="button_auth">Войти</string>
    <string name="question_is_account_not">Еще нет учетной записи?</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="create">Создание аккаунта</string>
    <string name="info">Заполните информацию о себе</string>
    <string name="text_tag">Выберите наиболее подходящие для себя теги: </string>
    <string name="education">обучение</string>
    <string name="education_2">Обучение</string>
    <string name="search">поиск работы</string>
    <string name="career">карьера</string>
    <string name="resume">резюме</string>
    <string name="resume_2">Резюме</string>
    <string name="fi">Иванов Семен</string>
    <string name="economist">Экономист</string>
    <string name="changed_template">Обновлено 11.09.2024</string>
    <string name="create_resume">Создать</string>
    <string name="geed">Гид по Figma для начинающих</string>
    <string name="search_courses">Поиск курсов</string>
    <string name="check_course">Пройденный</string>
    <string name="back">Назад</string>
    <string name="changed">Изменить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>