<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.EducationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/milk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Menu"
            android:layout_width="56dp"
            android:layout_height="88dp"
            android:background="@color/lilac"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/PhotoMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imAvatar"
            android:layout_width="73dp"
            android:layout_height="73dp"
            android:layout_marginStart="11dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/photo_mob"
            android:background="@drawable/ellipse"
            app:layout_constraintBottom_toBottomOf="@+id/Menu"
            app:layout_constraintStart_toEndOf="@+id/Menu" />

        <TextView
            android:id="@+id/FI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="22dp"
            android:text="@string/fi"
            android:textColor="@color/blue_3"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/imAvatar"
            app:layout_constraintTop_toTopOf="@+id/imAvatar" />

        <sazhin.pp.studentportalapp.LineView
            android:layout_width="114dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@+id/FI"
            app:layout_constraintTop_toBottomOf="@+id/FI" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Header">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edSearch"
            android:layout_width="361dp"
            android:layout_height="34dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/search"
            android:drawableLeft="@drawable/lupa"
            android:drawablePadding="5dp"
            android:elevation="10dp"
            android:ems="10"
            android:gravity="center|left"
            android:hint="@string/search_courses"
            android:inputType="text"
            android:paddingLeft="13dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_wrapBehaviorInParent="horizontal_only" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/idListEducation"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="19dp"
            android:layout_marginTop="25dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edSearch"
            tools:listitem="@layout/item_list_education" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Footer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blue_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Body">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">


            <ImageView
                android:id="@+id/PointWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/point_grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/PointGrey1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:src="@drawable/point_white"
                app:layout_constraintBottom_toBottomOf="@+id/PointWhite"
                app:layout_constraintEnd_toStartOf="@+id/PointWhite"
                app:layout_constraintTop_toTopOf="@+id/PointWhite" />

            <ImageView
                android:id="@+id/PointGrey2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:src="@drawable/point_grey"
                app:layout_constraintBottom_toBottomOf="@+id/PointWhite"
                app:layout_constraintStart_toEndOf="@+id/PointWhite"
                app:layout_constraintTop_toTopOf="@+id/PointWhite" />

            <TextView
                android:id="@+id/Resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/education_2"
                android:textColor="@color/white_3"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/PointWhite"
                app:layout_constraintEnd_toEndOf="@+id/PointGrey2"
                app:layout_constraintStart_toStartOf="@+id/PointGrey1"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ArrowRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:src="@drawable/arrow_right"
                app:layout_constraintBottom_toBottomOf="@+id/PointWhite"
                app:layout_constraintStart_toEndOf="@+id/PointGrey2"
                app:layout_constraintTop_toTopOf="@+id/PointWhite" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>